# Cloud-Computing

./: CMakeLists.txt  README.md
Pr. 1/: ex_1.cpp  ex_2.cpp
Pr. 2/: ex_1.cpp
